--- a/frontend/style.css
+++ b/frontend/style.css
@@ -42,9 +42,9 @@ body{
 }
 
 #cube1{
-  right: 0;
-  bottom: 0;
-  position: fixed;
+  position: absolute;
+  top: 10px;
+  left: 10px;
   background-color: #fe4a49;
   width: 400px;
   height: 400px;
@@ -75,15 +75,15 @@ body{
 }
 
 #cube6{
-  position: fixed;
-  left: 0;
-  top: 0;
   background-color: #fe9c8f;
   width: 300px;
   height: 300px;
 }
 
 #cube7{
+  position: absolute;
+  right: 0;
+  bottom: 0;
   background-color: #feb2a8;
   width: 280px;
   height: 280px;
@@ -103,11 +103,30 @@ body{
 }
 
 #cube10{
-
+  position: absolute;
+  top: 0;
+  left: 0;
   background-color: #f9caa7;
   width: 220px;
   height: 220px;
 }
+
+section{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  border-bottom: 1px solid crimson;
+}
+
+section button{
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  width: 200px;
+  height: 60px;
+  background-color: blueviolet;
+}
+
 
 p{
   color: #e6e6ea;
