--- a/frontend/style.css
+++ b/frontend/style.css
@@ -33,115 +33,24 @@ select {
 
 /*END OF CSS RESET*/
 
-body{
-/*   display: grid;
-  place-items: center; */
-  background-color: black;
-  width: 100vw;
-  height: 100vh;
-}
-
-#cube1{
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background-color: #fe4a49;
-  width: 400px;
-  height: 400px;
-}
-
-#cube2{
-  background-color: #2ab7ca;
-  width: 380px;
-  height: 380px;
-}
-
-#cube3{
-  background-color: #fed766;
-  width: 360px;
-  height: 360px;
-}
-
-#cube4{
-  background-color: #e6e6ea;
-  width: 340px;
-  height: 340px;
-}
-
-#cube5{
-  background-color: #f4f4f8;
-  width: 320px;
-  height: 320px;
-}
-
-#cube6{
-  background-color: #fe9c8f;
-  width: 300px;
-  height: 300px;
-}
-
-#cube7{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  background-color: #feb2a8;
-  width: 280px;
-  height: 280px;
-}
-
-#cube8{
-  background-color: #fec8c1;
-  width: 260px;
-  height: 260px;
-}
-
-#cube9{
-
-  background-color: #fad9c1;
-  width: 240px;
-  height: 240px;
-}
-
-#cube10{
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #f9caa7;
-  width: 220px;
-  height: 220px;
-}
-
 section{
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  border-bottom: 1px solid crimson;
+  min-height: 100vh;
 }
 
-section button{
-  position: absolute;
-  right: 30px;
-  bottom: 30px;
-  width: 200px;
-  height: 60px;
-  background-color: blueviolet;
+#section1{
+  padding: 20px;
+  background-clip: content-box;
+  background-image: url(hacker.jpg);
+  background-size: 200px 200px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: black;
 }
 
-
-p{
-  color: #e6e6ea;
+input[type="email"], [type="password"]{
+  border: 2px solid black;
 }
 
-/* #cube1, #cube2, #cube3, #cube4, #cube5, #cube6, #cube7, #cube8, #cube9, #cube10{
-  display: grid;
-  place-items: center;
-} */
+section.background-holder{
 
-/* div{
-  display: grid;
-  place-items: center;
-} */
-
-div{
-  margin: auto;
 }
