--- a/frontend/style.css
+++ b/frontend/style.css
@@ -33,17 +33,139 @@ select {
 
 /*END OF CSS RESET*/
 
+
 section{
   min-height: 100vh;
 }
 
-#section1{
+#welcome{
+  height: 100vh;
+  overflow: hidden;
+/*   background-image: url(hacker.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: black; */
+}
+
+#welcome img{
+  top: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+}
+
+#welcome button{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 200px;
+  height: 60px;
+  border-radius: 30px;
+  margin: 40px 0;
+  transform: translateX(-50%);
+  background-color: #09ced9;
+  color: whitesmoke;
+}
+
+#welcome h1{
+  margin-top: 40px;
+  margin-left: 40px;
+  color: whitesmoke;
+  font-size: 100px;
+  font-family: 'Kaushan Script', cursive;
+}
+
+#about {
+  background-color: violet;
+  min-height: unset;
+}
+
+#about article {
+  width: 100%;
+  max-width: 400px;
+  padding: 80px 20px;
+  margin: 0 auto;
+}
+
+#about h2{
+  padding-bottom: 20px;
+}
+
+#services{
+  padding: 80px 0;
   background-image: url(hacker.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-color: black;
 }
+
+#services ul{
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  margin: 0 auto;
+  list-style: none;
+  background-color: rgba(90, 90, 90, 0.5);
+}
+
+#services ul li{
+  padding-bottom: 10px;
+}
+
+#services ul li h2,
+#services ul li p{
+  text-align: center;
+
+}
+
+
+#contact{
+  background-color: tomato;
+}
+
+#contact form{
+  width: 100%;
+  max-width: 400px;
+  padding: 40px 20px;
+  margin: 0 auto;
+}
+
+#contact input,
+#contact label{
+  display: block;
+  width: 100%;
+}
+
+#contact label{
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+#contact input{
+  height: 60px;
+  padding: 0 10px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  background-color: whitesmoke;
+}
+
+#contact button{
+  width: 200px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #000000;
+  color: orange;
+  font-family: 'Poppins','sans-serif';
+  font-weight: 800;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+
 
 input[type="email"], [type="password"]{
   border: 2px solid black;
