--- a/frontend/style.css
+++ b/frontend/style.css
@@ -33,186 +33,13 @@ select {
 
 /*END OF CSS RESET*/
 
-html {
-  scroll-behavior: smooth;
-}
-
-header{
-  position: fixed;
-  left: 0;
-  top: 0;
+#root{
   width: 100%;
-  height: 50px;
-  z-index: 99;
-  text-align: center;
-  background-color: #9c43ef;
-}
-
-
-section{
   min-height: 100vh;
 }
 
-#welcome{
-  height: 100vh;
-  overflow: hidden;
-/*   background-image: url(hacker.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-color: black; */
-}
-
-#welcome img{
-  top: 0;
-  right: 0;
-  display: block;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  position: absolute;
-  z-index: -1;
-}
-
-#welcome button{
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 200px;
-  height: 60px;
-  border-radius: 30px;
-  margin: 40px 0;
-  transform: translateX(-50%);
-  background-color: #000000;
-  color: cyan;
-  font-family: 'Poppins','sans-serif';
-  font-weight: 800;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border: 2px solid whitesmoke;
-}
-
-#welcome h1{
-/*   margin-top: 40px;
-  margin-left: 40px; */
-  text-align: center;
-  color: whitesmoke;
-  font-size: 200px;
-  font-family: 'Kaushan Script', cursive;
-}
-
-#about {
-  background-color: cyan;
-  min-height: unset;
-  font-family: 'Poppins', sans-serif;
-}
-
-#about article {
-  width: 100%;
-  max-width: 400px;
-  padding: 80px 20px;
-  margin: 0 auto;
-}
-
-#about h2{
-  padding-bottom: 20px;
-}
-
-#services{
-  padding: 80px 0;
-  background-image: url(hacker.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-
-#services ul{
-  width: 100%;
-  max-width: 400px;
+#root button{
   padding: 20px;
-  margin: 0 auto;
-  list-style: none;
-  background-color: rgba(90, 90, 90, 0.5);
-}
-
-#services ul li{
-  padding-bottom: 10px;
-}
-
-#services ul li h2,
-#services ul li p{
-  text-align: center;
-  color: whitesmoke;
-  font-family: 'Poppins', sans-serif;
-
-}
-
-#services button{
-  position: fixed;
-  bottom: 5%;
-  right: 5%;
-  width: 50px;
-  height: 50px;
-  border-radius: 30px;
-  background-color: whitesmoke;
-  color: cyan;
-  font-family: 'Poppins','sans-serif';
-  font-weight: 800;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border: 2px solid whitesmoke;
-}
-
-
-#contact{
-  background-color:grey;
-}
-
-#contact form{
-  width: 100%;
-  max-width: 400px;
-  padding: 40px 20px;
-  margin: 0 auto;
-}
-
-#contact input,
-#contact label{
-  display: block;
-  width: 100%;
-  font-family: 'Poppins', sans-serif;
-}
-
-#contact label{
-  font-size: 20px;
-  padding-bottom: 10px;
-}
-
-#contact input{
-  height: 60px;
-  padding: 0 10px;
-  margin-bottom: 30px;
-  font-size: 18px;
-  background-color: whitesmoke;
-  border-radius: 30px;
-}
-
-#contact button{
-  width: 200px;
-  height: 60px;
-  border-radius: 30px;
-  background-color: #000000;
-  color: cyan;
-  font-family: 'Poppins','sans-serif';
-  font-weight: 800;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border: 2px solid whitesmoke;
-}
-
-
-input[type="email"], [type="password"]{
-  border: 2px solid black;
+  margin: 20px;
+  background-color: blueviolet;
 }
